# programming-principles-assessment

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: Client.h  CompressionAlgorithm.h  FileHandler.h  RLECompression.h  Server.h  huffman.h
src/: Client.cpp  ClientMain.cpp  FileHandler.cpp  RLECompression.cpp  Server.cpp  ServerMain.cpp  huffman.cpp
tests/: test10_edgecases.cpp  test1_rle_roundtrip.cpp  test2_rle_empty.cpp  test3_filehandler_roundtrip.cpp  test4_polymorphism.cpp  test5_network_single.cpp  test6_network_multiple.cpp  test7_multithreading_counter.cpp  test8_multithreading_compression.cpp  test9_scalability_large.cpp
